--- a/.gitignore
+++ b/.gitignore
@@ -1,207 +1,128 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[codz]
-*$py.class
+# ==============================
+# STOCK MARKET PREDICTION SYSTEM
+# ==============================
 
-# C extensions
-*.so
+# Install required packages (run once)
+# pip install yfinance pandas numpy matplotlib scikit-learn ta
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+import yfinance as yf
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+from ta.momentum import RSIIndicator
+from ta.trend import MACD, SMAIndicator
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+from sklearn.model_selection import train_test_split
+from sklearn.ensemble import RandomForestClassifier
+from sklearn.metrics import accuracy_score, classification_report
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py.cover
-.hypothesis/
-.pytest_cache/
-cover/
 
-# Translations
-*.mo
-*.pot
+# ------------------------------
+# 1. Download Historical Data
+# ------------------------------
+stock_symbol = "AAPL"
+data = yf.download(stock_symbol, start="2018-01-01", end="2024-01-01")
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# ------------------------------
+# 2. Feature Engineering
+# ------------------------------
+data['SMA_20'] = SMAIndicator(data['Close'], window=20).sma_indicator()
+data['SMA_50'] = SMAIndicator(data['Close'], window=50).sma_indicator()
+data['RSI'] = RSIIndicator(data['Close'], window=14).rsi()
 
-# Flask stuff:
-instance/
-.webassets-cache
+macd = MACD(data['Close'])
+data['MACD'] = macd.macd()
+data['MACD_signal'] = macd.macd_signal()
 
-# Scrapy stuff:
-.scrapy
+data.dropna(inplace=True)
 
-# Sphinx documentation
-docs/_build/
+# ------------------------------
+# 3. Target Variable (Buy/Sell)
+# ------------------------------
+data['Tomorrow'] = data['Close'].shift(-1)
+data['Target'] = (data['Tomorrow'] > data['Close']).astype(int)
+data.dropna(inplace=True)
 
-# PyBuilder
-.pybuilder/
-target/
+# ------------------------------
+# 4. Feature Selection
+# ------------------------------
+features = [
+    'Close',
+    'SMA_20',
+    'SMA_50',
+    'RSI',
+    'MACD',
+    'MACD_signal'
+]
 
-# Jupyter Notebook
-.ipynb_checkpoints
+X = data[features]
+y = data['Target']
 
-# IPython
-profile_default/
-ipython_config.py
+# ------------------------------
+# 5. Train-Test Split
+# ------------------------------
+X_train, X_test, y_train, y_test = train_test_split(
+    X, y, test_size=0.2, shuffle=False
+)
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+# ------------------------------
+# 6. Train Model
+# ------------------------------
+model = RandomForestClassifier(
+    n_estimators=100,
+    max_depth=5,
+    random_state=42
+)
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+model.fit(X_train, y_train)
 
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
+# ------------------------------
+# 7. Model Evaluation
+# ------------------------------
+predictions = model.predict(X_test)
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
+print("Model Accuracy:", accuracy_score(y_test, predictions))
+print("\nClassification Report:\n", classification_report(y_test, predictions))
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
-#   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
-#pdm.lock
-#pdm.toml
-.pdm-python
-.pdm-build/
+# ------------------------------
+# 8. Latest Buy / Sell Signal
+# ------------------------------
+latest_data = X.iloc[-1:].values
+signal = model.predict(latest_data)
 
-# pixi
-#   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
-#pixi.lock
-#   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
-#   in the .venv directory. It is recommended not to include this directory in version control.
-.pixi
+if signal[0] == 1:
+    print("\n📈 BUY Signal")
+else:
+    print("\n📉 SELL Signal")
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+# ------------------------------
+# 9. Visualization
+# ------------------------------
+data['Prediction'] = model.predict(X)
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+plt.figure(figsize=(14, 6))
+plt.plot(data['Close'], label='Close Price', alpha=0.7)
 
-# SageMath parsed files
-*.sage.py
+plt.scatter(
+    data.index[data['Prediction'] == 1],
+    data['Close'][data['Prediction'] == 1],
+    marker='^',
+    color='green',
+    label='Buy'
+)
 
-# Environments
-.env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+plt.scatter(
+    data.index[data['Prediction'] == 0],
+    data['Close'][data['Prediction'] == 0],
+    marker='v',
+    color='red',
+    label='Sell'
+)
 
-# Spyder project settings
-.spyderproject
-.spyproject
+plt.title(f"{stock_symbol} Stock Buy/Sell Prediction")
+plt.xlabel("Date")
+plt.ylabel("Price")
+plt.legend()
+plt.show()
 
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
-
-# Abstra
-# Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
-# Learn more at https://abstra.io/docs
-.abstra/
-
-# Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
-
-# Ruff stuff:
-.ruff_cache/
-
-# PyPI configuration file
-.pypirc
-
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
-
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
